tests/specs/check/use_unknown_in_catch_variables/main.out
Check file:///[WILDCARD]/main.ts
error: TS18046 [ERROR]: 'e' is of type 'unknown'.
  console.log(e.message);
              ^
    at file://[WILDCARD]/use_unknown_in_catch_variables/main.ts:4:15
